--- a/signupstyle.css
+++ b/signupstyle.css
@@ -403,6 +403,23 @@ input[type="submit"].login:focus {
     position: relative;
     text-align: right;
 }
+@media screen and (max-width: 480px) {
+    .btn {
+        color: #fff;
+        background-color: #2acab6;
+        outline: none;
+        border: 0;
+        color: #fff;
+        padding: 10px 20px;
+        margin-left: 300px;
+        text-transform: uppercase;
+        margin-top: 0px;
+        border-radius: 2px;
+        cursor: pointer;
+        position: relative;
+        text-align: right;
+    }
+}
 
 .input-container input:focus~label,
 .input-container input:valid~label {
