--- a/signupstyle.css
+++ b/signupstyle.css
@@ -395,7 +395,7 @@ input[type="submit"].login:focus {
     border: 0;
     color: #fff;
     padding: 10px 20px;
-    margin-left: 350px;
+    margin-left: 50%;
     text-transform: uppercase;
     margin-top: 0px;
     border-radius: 2px;
