--- a/signupstyle.css
+++ b/signupstyle.css
@@ -395,7 +395,8 @@ input[type="submit"].login:focus {
     border: 0;
     color: #fff;
     padding: 10px 20px;
-    margin-left: 300px;
+    margin-left: 10%;
+    margin-bottom: 5%;
     text-transform: uppercase;
     margin-top: 0px;
     border-radius: 2px;
@@ -403,7 +404,8 @@ input[type="submit"].login:focus {
     position: relative;
     text-align: right;
 }
-@media screen and (max-width: 480px) {
+
+@media screen and (max-width: 600px) {
     .btn {
         color: #fff;
         background-color: #2acab6;
@@ -411,7 +413,8 @@ input[type="submit"].login:focus {
         border: 0;
         color: #fff;
         padding: 10px 20px;
-        margin-left: 50%;
+        margin-left: 10%;
+        margin-bottom: 5%;
         text-transform: uppercase;
         margin-top: 0px;
         border-radius: 2px;
